force-app/main/default/objects/CMS_Customer_Item__c/CMS_Customer_Item__c.object-meta.xml
<CustomObject>
    <label>Customer Item</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Customer Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>