force-app/main/default/objects/CMS_Customer_Item__c/fields/Borrowed_Price__c.field-meta.xml
<CustomField>
    <fullName>Borrowed_Price__c</fullName>
    <label>Borrowed Price</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>