force-app/main/default/objects/CMS_Customer_Item__c/fields/CSF_Customer__c.field-meta.xml
<CustomField>
    <fullName>CSF_Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>CFS_Customer__c</referenceTo>
    <relationshipLabel>Customer Items</relationshipLabel>
    <relationshipName>Customer_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>