force-app/main/default/objects/CMS_Customer_Item__c/fields/CSF_Item__c.field-meta.xml
<CustomField>
    <fullName>CSF_Item__c</fullName>
    <label>Item</label>
    <referenceTo>CFS_Item__c</referenceTo>
    <relationshipLabel>Customer Items</relationshipLabel>
    <relationshipName>Customer_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>