force-app/main/default/objects/CMS_Customer_Item__c/fields/Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week__c</fullName>
    <formula>IF (
				WEEKDAY(DATEVALUE(CreatedDate) ) = 3,
				&apos;WEEKEND&apos;,
				&apos;WEEKDAY&apos;
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Week</label>
    <type>Text</type>
</CustomField>