force-app/main/default/objects/CMS_Customer_Item__c/fields/Item_s_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Item_s_Purchase_Price__c</fullName>
    <label>Item&apos;s Purchase Price</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>