force-app/main/default/objects/CMS_Customer_Item__c/fields/Item_type__c.field-meta.xml
<CustomField>
    <fullName>Item_type__c</fullName>
    <label>Item type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Book</fullName>
            </value>
            <value>
                <fullName>AV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>