force-app/main/default/objects/CMS_Customer_Item__c/fields/Late_Fees__c.field-meta.xml
<CustomField>
    <fullName>Late_Fees__c</fullName>
    <formula>IF (
     ISPICKVAL(Status__c, &apos;Borrow&apos;) &amp;&amp; TODAY() &gt; End_Date__c,
				 (TODAY() - End_Date__c)*0,
				 0
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>