force-app/main/default/objects/CMS_Customer_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrow</fullName>
                <default>true</default>
                <label>Borrow</label>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Check out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>